# ibkr-json-export

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.json  docker-compose.yml  ibkr_to_json.py  monthly_engine.py  pyproject.toml  requirements.txt  stress_test_thresholds.py
results/: eval_intents_base.jsonl  eval_intents_sft.jsonl  eval_onbox_summary.json
results/mapper-1.5b-sft-v1/: README.md  run_manifest.json  train_config.json
results/mapper-1.5b-sft-v1/checkpoint-15/: rng_state.pth  scheduler.pt  trainer_state.json
results/mapper-1.5b-sft-v1/checkpoint-30/: rng_state.pth  scheduler.pt  trainer_state.json
results/mapper-1.5b-sft-v1/checkpoint-45/: adapter_config.json  rng_state.pth  trainer_state.json
